--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -48,6 +48,13 @@
           </widget>
          </item>
          <item>
+          <widget class="QPushButton" name="choose_in">
+           <property name="text">
+            <string>打开</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QLineEdit" name="input"/>
          </item>
         </layout>
@@ -62,11 +69,31 @@
           </widget>
          </item>
          <item>
+          <widget class="QPushButton" name="choose_out">
+           <property name="text">
+            <string>选择</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QLineEdit" name="output"/>
          </item>
         </layout>
        </item>
       </layout>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
      <item>
       <widget class="QTextEdit" name="outinfo"/>
